# scia

./: README.md  files and folders.py  pyproject.toml  setup.py  test.ipynb
.github/: deploy.yml
.github/workflows/: pypi-publish.yml
Documentation/: _toc.yml  sample.xlsx  sample_output.xlsx
Documentation/_build/.doctrees/: autocorrelation.doctree  create-dataframe.doctree  environment.pickle  import-update.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree
Documentation/_build/html/: autocorrelation.html  create-dataframe.html  fill_missing.html  installation.html
Documentation/_build/html/_sources/: autocorrelation.ipynb  fill_missing.ipynb
Documentation/_build/jupyter_execute/: create-dataframe.ipynb  fill_missing.ipynb  import-update.ipynb  import_export.ipynb  installation.ipynb  subset_data.ipynb
docs/: create-dataframe.ipynb  installation.ipynb  sample_output.xlsx  search.html  searchindex.js  subset_data.html
docs/_build/.doctrees/: autocorrelation.doctree  create-dataframe.doctree  describe.doctree  environment.pickle  fill_missing.doctree  import-update.doctree  import_export.doctree  installation.doctree  intro.doctree  ird.doctree  nap.doctree  notebooks.doctree  pand.doctree  rci.doctree  smd.doctree  subset_data.doctree
docs/_build/html/: .buildinfo  genindex.html  import-update.html  import_export.html  intro.html  objects.inv
docs/_build/html/_sources/: import-update.ipynb  import_export.ipynb
docs/_build/jupyter_execute/: autocorrelation.ipynb  notebooks.ipynb
scia/: __init__.py  _version.py  ird.py
